--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/zskillup-logo.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/zskillup-logo.png" />
-    <!-- <link rel="shortcut icon" href="/favicon.ico" /> -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/Fav Icon-01.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/Fav Icon-01.png" />
+    <link rel="shortcut icon" href="/Fav Icon-01.png" />
     <title>ZSkillup - Future-Ready Graduates, Future-Strong Institutions</title>
     <meta name="description" content="AI-powered employability solutions for universities. Transform students into job-ready professionals with 250+ placements, 450+ hiring partners, and industry-leading outcomes." />
     <meta name="author" content="ZSkillup" />
